--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,6 @@
     <script src="main.js"></script>
 </head>
 <body>
-   Hello World! just testing.
-   another line
+   Hello World!
 </body>
 </html>
